; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/codecs/extr_msm8916-wcd-analog.c_pm8916_wcd_analog_set_jack.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/codecs/extr_msm8916-wcd-analog.c_pm8916_wcd_analog_set_jack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_soc_component = type { i32 }
%struct.snd_soc_jack = type { i32 }
%struct.pm8916_wcd_analog_priv = type { %struct.snd_soc_jack* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_soc_component*, %struct.snd_soc_jack*, i8*)* @pm8916_wcd_analog_set_jack to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pm8916_wcd_analog_set_jack(%struct.snd_soc_component* %0, %struct.snd_soc_jack* %1, i8* %2) #0 {
  %4 = alloca %struct.snd_soc_component*, align 8
  %5 = alloca %struct.snd_soc_jack*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.pm8916_wcd_analog_priv*, align 8
  store %struct.snd_soc_component* %0, %struct.snd_soc_component** %4, align 8
  store %struct.snd_soc_jack* %1, %struct.snd_soc_jack** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load %struct.snd_soc_component*, %struct.snd_soc_component** %4, align 8
  %9 = call %struct.pm8916_wcd_analog_priv* @snd_soc_component_get_drvdata(%struct.snd_soc_component* %8)
  store %struct.pm8916_wcd_analog_priv* %9, %struct.pm8916_wcd_analog_priv** %7, align 8
  %10 = load %struct.snd_soc_jack*, %struct.snd_soc_jack** %5, align 8
  %11 = load %struct.pm8916_wcd_analog_priv*, %struct.pm8916_wcd_analog_priv** %7, align 8
  %12 = getelementptr inbounds %struct.pm8916_wcd_analog_priv, %struct.pm8916_wcd_analog_priv* %11, i32 0, i32 0
  store %struct.snd_soc_jack* %10, %struct.snd_soc_jack** %12, align 8
  ret i32 0
}

declare dso_local %struct.pm8916_wcd_analog_priv* @snd_soc_component_get_drvdata(%struct.snd_soc_component*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
